--- a/index.html
+++ b/index.html
@@ -2,18 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/akhuwatfundslogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- SEO Meta Tags -->
+    <!-- ✅ Favicon Icons -->
+    <link rel="icon" type="image/png" href="/akhuwatfundslogo.png" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+
+    <!-- ✅ SEO Meta Tags -->
     <title>Akhuwat Loan Services 2025 | Interest-Free Loans in Pakistan</title>
     <meta name="description" content="Apply for Akhuwat Foundation interest-free loans up to 50 Lacs PKR. Business loans, personal loans, education loans, and housing loans available. Contact: 03354571620" />
     <meta name="keywords" content="Akhuwat loan, interest-free loans Pakistan, Qarz-e-Hasna, business loans, personal loans, education loans, housing loans, microfinance" />
     <meta name="author" content="Akhuwat Foundation" />
     <meta name="robots" content="index, follow" />
-    <!-- <link rel="canonical" href="https://akhuwat.network" /> -->
 
-    <!-- Open Graph Meta Tags -->
+    <!-- ✅ Open Graph Tags -->
     <meta property="og:title" content="Akhuwat Loan Services 2025 | Interest-Free Loans" />
     <meta property="og:description" content="Get interest-free loans up to 50 Lacs PKR from Akhuwat Foundation. Apply online for business, personal, education, and housing loans." />
     <meta property="og:image" content="/akhuwatfoundationbusinessloan3.jpg" />
@@ -21,16 +23,15 @@
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Akhuwat Foundation" />
 
-    <!-- Twitter Card Meta Tags -->
+    <!-- ✅ Twitter Card Tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Akhuwat Loan Services 2025" />
     <meta name="twitter:description" content="Interest-free loans up to 50 Lacs PKR. Apply online today!" />
-    <!-- <meta name="twitter:image" content="https://i.postimg.cc/zGZsSdqf/akhuwatfoundationbusinessloan3.jpg" /> -->
 
-    <!-- Theme Color -->
+    <!-- ✅ Theme Color -->
     <meta name="theme-color" content="#22C55E" />
 
-    <!-- Structured Data (JSON-LD) -->
+    <!-- ✅ Structured Data (JSON-LD) -->
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
@@ -59,15 +60,18 @@
       })(window,document,'script','dataLayer','GTM-WQQNTCBQ');
     </script>
     <!-- End Google Tag Manager -->
-
   </head>
+
   <body>
     <!-- ✅ Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WQQNTCBQ"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
 
+    <!-- ✅ React App Root -->
     <div id="root"></div>
+
+    <!-- ✅ Vite or CRA Main JS -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
